--- a/index.html
+++ b/index.html
@@ -9,6 +9,42 @@
         <title>Cv en ligne</title>
     </head>
     <body>    
+        <section>
+            <div class="row">
+                <div class="col">
+                    <h2>
 
+                    </h2>
+                    <h2>
+                        
+                    </h2>
+                    <h2>
+
+                    </h2>
+                </div>
+                <div class="col">
+                    <h2>
+
+                    </h2>
+                    <h2>
+
+                    </h2>
+                    <h2>
+
+                    </h2>
+                </div>
+                <div class="col">
+                    <h2>
+
+                    </h2>
+                    <h2>
+
+                    </h2>
+                    <h2>
+                        
+                    </h2>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
