--- a/index.html
+++ b/index.html
@@ -5,46 +5,151 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="Cv en ligne nathan garrigues">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./Styles.css">
+        <link rel="stylesheet" href="./styles/bootstrap.css">
+        <link rel="stylesheet" href="./styles/styles.css">
+        <link rel="shortcut icon" href="./img/./dragon-5381707.svg" type="image/x-icon">
         <title>Cv en ligne</title>
     </head>
     <body>    
-        <section>
-            <div class="row">
-                <div class="col">
-                    <h2>
-
-                    </h2>
-                    <h2>
-                        
-                    </h2>
-                    <h2>
-
-                    </h2>
+        <header>
+            <nav class="navbar navbar-expand-md navbar-light bg-danger ">
+                <div class="container-fluid d-flex justify-content-around">
+                  <img src="./img/" alt="photo de profile">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                      <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">accueil</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">Savoir du web</a>
+                      </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="#">experience/diplôme</a>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          information utile
+                        </a>
+                        <ul class="dropdown-menu  bg-danger" aria-labelledby="navbarDropdownMenuLink">
+                          <li><a class="dropdown-item" href="#">Site déployer</a></li>
+                          <li><a class="dropdown-item" href="#">Me contacter</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-                <div class="col">
-                    <h2>
-
-                    </h2>
-                    <h2>
-
-                    </h2>
-                    <h2>
-
-                    </h2>
-                </div>
-                <div class="col">
-                    <h2>
-
-                    </h2>
-                    <h2>
-
-                    </h2>
-                    <h2>
-                        
-                    </h2>
-                </div>
+              </nav>
+        </header>
+        <h1>
+            Cv en ligne de Nathan Garrigues
+        </h1>
+        <h2>
+            Compétence Web
+        </h2>
+        <div class="row">
+            <div class="col-11 col-md-3 d-flex flex-column align-items-center">
+                <h2>Photoshop</h2>
+                <p></p>
             </div>
+            <div class="col-11 col-md-4 d-flex flex-column align-items-center">
+                <h2>Html/css/js</h2>
+                <p></p>
+            </div>
+            <div class="col-11 col-md-3 d-flex flex-column align-items-center">
+                <h2>Bootstrap</h2>
+                <p></p>
+            </div>
+        </div>
+        <div class="row">
+          <h1>
+            Diplome
+          </h1>
+          <div class="col-11 col-md-4 d-flex flex-column align-items-center">
+            <h2>Experience Professionel</h2>
+            <p>
+              07/09/2020-07/03/2021: <br> Service Civique, au Centre Saint-Joseph - Etablissement Scolaire Privé, Bourg en Bresse. <br>
+              Contribuer aux activités d’éducation au
+              développement durable, aux enjeux
+              environnementaux, à la culture et au sport
+              nature.
+              Rajout de fonction suite au Covid-19, aide au 
+              service, rangement et nettoyage du Self.
+            </p>
+            <p>
+              09/2018 : Stage en Contrôle Qualité, CMSI,Attignat
+              Metrologie
+            </p>
+            <p>
+              06/2018 – 07/2018 : Stage en Laboratoire
+              Contrôle Qualité de Crémants et de Liqueurs,
+              La Veuve Ambal, Beaune. <br>
+              Réalisation de solution et danalyse pour 
+              verifier que le vin et propre a la consomation. 
+              Préparations de solutions chimiques et de 
+              solutions pour le vin.
+            </p>
+            <p>
+              04/2018 : Stage Préparateur de travaux
+              pratiques Lycée Vinicole, Beaune. <br>
+              Préparations de solutions chimiques et de 
+              solutions pour le vin.
+            </p>
+          </div>
+          <div class="col-11 col-md-4 d-flex flex-column align-items-center">
+            <h2>Formation</h2>
+            <p>
+             2019 2020 Bts STA(Science Technologie des Aliments)
+             2019 Obtention du Bac Pro LCQ
+             2017 2019 Bac Pro LCQ(Laboratoire Contrôle Qualiter)
+             2016 2017 Segonde général
+             2016 Obtention du Brevet des collèges
+            </p>
+          </div>
+          <div class="col-11 col-md-4 d-flex flex-column align-items-center">
+           <h2>Competence Transversal</h2>
+           <p>
+            Capacité à communiquer dans une langue étrangère <br>
+            Autonomie, initiative <br>
+            Rigueur <br>
+           </p>
+          </div>
+        </div>
+        <section class="animation">
+          <div class="row">
+            <h1>
+              Animation
+            </h1>
+            <div class="col-md-4">
+
+            </div>
+            <div class="col-md-4">
+
+            </div>
+            <div class="col-md-4">
+
+            </div>
+          </div>
         </section>
+        <section class="Deployer">
+          <div class="row">
+            <h1>
+              Site déployer
+            </h1>
+            <div class="col-md-4">
+
+            </div>
+            <div class="col-md-4">
+
+            </div>
+            <div class="col-md-4">
+
+            </div>
+          </div>
+        </section>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+        <script src="./app.js/app.js"></script>
     </body>
 </html>
