--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     </head>
     <body>    
         <header>
-            <nav class="navbar navbar-expand-md navbar-light bg-danger ">
+            <nav class="navbar navbar-expand-md navbar-light bg-danger">
                 <div class="container-fluid d-flex justify-content-around">
                   <img src="./img/" alt="photo de profile">
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                  <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNavDropdown">
                     <ul class="navbar-nav">
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">accueil</a>
@@ -35,8 +35,10 @@
                         </a>
                         <ul class="dropdown-menu  bg-danger" aria-labelledby="navbarDropdownMenuLink">
                           <li><a class="dropdown-item" href="#">Site déployer</a></li>
-                          <li><a class="dropdown-item" href="#">Me contacter</a></li>
                         </ul>
+                        <li>
+                          <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Me contacter</button>
+                        </li>
                       </li>
                     </ul>
                   </div>
@@ -52,15 +54,27 @@
         <div class="row">
             <div class="col-11 col-md-3 d-flex flex-column align-items-center">
                 <h2>Photoshop</h2>
-                <p></p>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%">35%</div>
+                </div>
             </div>
             <div class="col-11 col-md-4 d-flex flex-column align-items-center">
                 <h2>Html/css/js</h2>
-                <p></p>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">HTML5 80%</div>
+                </div>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100" style="width: 42%">CSS3 42%</div>
+                </div>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="3" aria-valuemin="0" aria-valuemax="100" style="width: 3%">JS</div>
+                </div>
             </div>
             <div class="col-11 col-md-3 d-flex flex-column align-items-center">
                 <h2>Bootstrap</h2>
-                <p></p>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">Bootstrap5 45%</div>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -97,6 +111,69 @@
               Préparations de solutions chimiques et de 
               solutions pour le vin.
             </p>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+              <div class="offcanvas-header">
+                <h5 id="offcanvasRightLabel">Offcanvas right</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>
+              <div class="offcanvas-body">
+                <div class="accordion" id="accordionExample">
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Kiwi
+                      </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Passion
+                      </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <h2>
+                          Manga
+                        </h2>
+                        <div>
+                          <img src="./img/ddcv9jn-63d4d9fd-10bd-460b-822d-8d6dc240edac.png" alt="">
+                          <img src="./img/kTzWqAl.jpeg" alt="">
+                        </div>
+                        <h2>
+                          Jeux video
+                        </h2>
+                        <div>
+                          <img src="" alt="">
+                          <img src="" alt="">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Contact
+                      </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1742.1270231914798!2d5.1902112245688015!3d46.200228261199804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f3517313c668ab%3A0x2aa23934395e81d8!2s120%20Rue%20du%20Village%2C%2001000%20Saint-Denis-l%C3%A8s-Bourg!5e1!3m2!1sfr!2sfr!4v1632233682905!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <a href=""></a>
+                        <a href=""></a>
+                        <a href=""></a>
+                        <a href="https://github.com/nathgarr"></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-11 col-md-4 d-flex flex-column align-items-center">
             <h2>Formation</h2>
@@ -149,6 +226,17 @@
             </div>
           </div>
         </section>
+        <footer>
+          <section>
+            <div class="row">
+              <div class="col-2"></div>
+              <div class="col-2"></div>
+              <div class="col-2"></div>
+              <div class="col-2"></div>
+              <div class="col-2"></div>
+            </div>
+          </section>
+        </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
         <script src="./app.js/app.js"></script>
     </body>
