--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-                  <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNavDropdown">
+                  <div class="collapse navbar-collapse " id="navbarNavDropdown">
                     <ul class="navbar-nav">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">accueil</a>
+                        <a class="nav-link active" aria-current="page" href="./index.html"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-door-fill" viewBox="0 0 16 16">
+                          <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z"/>
+                        </svg> </a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">Savoir du web</a>
@@ -37,7 +39,7 @@
                           <li><a class="dropdown-item" href="#">Site déployer</a></li>
                         </ul>
                         <li>
-                          <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Me contacter</button>
+                          <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasLeft" aria-controls="offcanvasLeft">Me contacter</button>
                         </li>
                       </li>
                     </ul>
@@ -73,7 +75,7 @@
             <div class="col-11 col-md-3 d-flex flex-column align-items-center">
                 <h2>Bootstrap</h2>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">Bootstrap5 45%</div>
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%"> 45%</div>
                 </div>
             </div>
         </div>
@@ -111,25 +113,13 @@
               Préparations de solutions chimiques et de 
               solutions pour le vin.
             </p>
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasLeft" aria-labelledby="offcanvasLeftLabel">
               <div class="offcanvas-header">
-                <h5 id="offcanvasRightLabel">Offcanvas right</h5>
+                <h5 id="offcanvasLeftLabel">Contact</h5>
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
               </div>
               <div class="offcanvas-body">
                 <div class="accordion" id="accordionExample">
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingOne">
-                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        Kiwi
-                      </button>
-                    </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                      <div class="accordion-body">
-                        
-                      </div>
-                    </div>
-                  </div>
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="headingTwo">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -149,8 +139,8 @@
                           Jeux video
                         </h2>
                         <div>
-                          <img src="" alt="">
-                          <img src="" alt="">
+                          <img src="./img/yEVcKs-yXuqxjkM6UAzNGRFiIfaXcfg2SEUx6fAYTSM_1920x1080_1x-0.jpeg" alt="">
+                          <img src="./img/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f776174747061642d6d656469612d736572766963652f53746f7279496d6167652f447177396f686f444174595972413d3d2d3434323536343336352e31346432373833346437663.jfif" alt="">
                         </div>
                       </div>
                     </div>
@@ -162,12 +152,29 @@
                       </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                      <div class="accordion-body">
+                      <div class="accordion-body white">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1742.1270231914798!2d5.1902112245688015!3d46.200228261199804!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f3517313c668ab%3A0x2aa23934395e81d8!2s120%20Rue%20du%20Village%2C%2001000%20Saint-Denis-l%C3%A8s-Bourg!5e1!3m2!1sfr!2sfr!4v1632233682905!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                        <a href=""></a>
-                        <a href=""></a>
-                        <a href=""></a>
-                        <a href="https://github.com/nathgarr"></a>
+                        <h2>
+                          Contacter moi
+                        </h2>
+                        <p>
+                          Nathan GARRIGUES,20 ans
+                          120 rue du village, 01000 Saint Denis les Bourgs
+                          06 46 79 90 38 ou 09 87 15 13 18
+                          <a href="mailto:nathgarr@outlook.fr">nathgarr@outlook.fr</a>
+                        </p>
+                        <div>
+                          <a href="" target="_blank"><img src="./img/icon/iconmonstr-discord-1.svg" alt="Discord-icon"></a>
+                        </div>
+                        <div>
+                          <a href="./pdf/cv nathan.pdf" download="nathan.pdf"><img src="./img/icon/download.svg" alt="CV-PDF"></a>
+                        </div>
+                        <div>
+                          <a href="https://www.linkedin.com/in/nathan-garrigues-91073a218/" target="_blank"><img src="./img/icon/linkedin.svg" alt="linkedin-icon"></a>
+                        </div>
+                        <div>
+                          <a href="https://github.com/nathgarr" target="_blank"><img src="./img/icon/github.svg" alt="git-icon"></a>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -226,6 +233,7 @@
             </div>
           </div>
         </section>
+        
         <footer>
           <section>
             <div class="row">
