--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                           Contacter moi
                         </h2>
                         <p>
-                          Nathan GARRIGUES,20 ans
+                          Nathan GARRIGUES,21 ans
                           120 rue du village, 01000 Saint Denis les Bourgs
                           06 46 79 90 38 ou 09 87 15 13 18
                           <a href="mailto:nathgarr@outlook.fr">nathgarr@outlook.fr</a>
@@ -203,24 +203,31 @@
         </div>
         <section class="animation">
           <div class="row">
-            <h1>
-              Animation
+            <h1 class="anime">
+              Animations
             </h1>
-            <div class="col-md-4">
+            <div class="box">
+              <div class="circle">
 
+              </div>
+              <p>
+                Nathan
+              </p>
             </div>
-            <div class="col-md-4">
-
+            <div class="loading">
+              <span></span>
+              <span></span>
+              <span></span>
             </div>
-            <div class="col-md-4">
+            <div class="col-12">
 
             </div>
           </div>
         </section>
-        <section class="Deployer">
+        <section class="Deployés">
           <div class="row">
             <h1>
-              Site déployer
+              Sites déployés
             </h1>
             <div class="col-md-4">
 
