--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 </div>
               </nav>
         </header>
+        
         <h1>
             Cv en ligne de Nathan Garrigues
         </h1>
@@ -75,7 +76,8 @@
                 </div>
             </div>
             <div class="col-11 col-md-3 d-flex flex-column align-items-center">
-                <h2>Bootstrap</h2>
+                <h2>Bootstrap
+                </h2>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%"> 45%</div>
                 </div>
@@ -230,6 +232,9 @@
               <div class="theme" id="red">
                   
               </div>
+              <div class="theme" id="reset">
+
+              </div>
           </div>
         </section>
         <section class="Deployés">
@@ -237,28 +242,19 @@
             <h1>
               Sites déployés
             </h1>
-            <div class="col-md-4">
-
+            <div class="col-md-4 d-flex justify-content-center align-items-center">
+              <a href="https://nathang.promo-92.codeur.online/Harous-Pizza/" target="_blank"><img src="./img/harous-pizza.PNG" alt=""></a>
             </div>
-            <div class="col-md-4">
-
+            <div class="col-md-4 d-flex justify-content-center align-items-center">
+              <a href="./img/view-on.PNG" target="_blank"><img src="./img/view-on.PNG" alt=""></a>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 d-flex justify-content-center align-items-center">
 
             </div>
           </div>
         </section>
       </div>
         <footer>
-          <section>
-            <div class="row">
-              <div class="col-2"></div>
-              <div class="col-2"></div>
-              <div class="col-2"></div>
-              <div class="col-2"></div>
-              <div class="col-2"></div>
-            </div>
-          </section>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
         <script src="./app.js/app.js"></script>
