--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
                           information utile
                         </a>
                         <ul class="dropdown-menu  bg-danger" aria-labelledby="navbarDropdownMenuLink">
-                          <li><a class="dropdown-item" href="#">Site déployer</a></li>
+                          <li><a class="dropdown-item" href="#Animations">Animations</a></li>
+                          <li><a class="dropdown-item" href="#Sites-déployés">Sites Déployer</a></li>
                         </ul>
                         <li>
                           <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasLeft" aria-controls="offcanvasLeft">Me contacter</button>
@@ -207,22 +208,36 @@
         </div>
         <section class="animation">
           <div class="row">
-            <h1 class="anime">
+            <h1 class="anime" id="Animations">
               Animations
             </h1>
-            <div class="box col-3">
+            <div class="box col-12 col-md-3 d-flex flex-column align-items-center">
+              <h5>
+                Rond tournant de 4couleurs
+              </h5>
               <div class="circle">
                 <p>
                   Nathan
                 </p>
               </div>
             </div>
-            <div class="loading col-3">
-              <span></span>
-              <span></span>
-              <span></span>
+            <div class=" col-12 col-md-3">
+              <h5>
+                Effet de chargement 3d
+              </h5>
+              <div class="loading">
+                <span></span>
+                <span></span>
+                <span></span>
+              </div>
             </div>
-            <div class="themeContainer col-3 d-flex justify-content-center">
+            <div class="themeContainer col-12 col-md-3 d-flex align-items-center flex-column">
+              <h2>
+                Changement de couleur
+              </h2>
+              <p>
+                Amuser vous avec les couleurs disponible la quatrième remet la couleur de base!
+              </p>
               <div class="theme" id="verdant">
     
               </div>
@@ -239,7 +254,7 @@
         </section>
         <section class="Deployés">
           <div class="row">
-            <h1>
+            <h1 id="Sites-déployés">
               Sites déployés
             </h1>
             <div class="col-md-4 d-flex justify-content-center align-items-center">
