--- a/index.html
+++ b/index.html
@@ -59,13 +59,18 @@
         </h2>
         <div class="row">
             <div class="col-11 col-md-3 d-flex flex-column align-items-center">
-                <h2>Photoshop</h2>
+                <h2>Photoshop <img class="icons" src="./img/icon/photoshop-1065296_640.jpg"> <br>Illustrator <img class="icons" src="./img/icon/adobe-illustrator-5977785_640.png"></h2>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%">35%</div>
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%">Bootstrap 35%</div>
+                </div>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width: 22%">Illustrator 15%</div>
                 </div>
             </div>
             <div class="col-11 col-md-4 d-flex flex-column align-items-center">
-                <h2>Html/css/js</h2>
+                <h2>
+                  Html5<img class="icons" src="./img/icon/html5-1841458_640.png"> <br> Css3<img class="icons" src="./img/icon/css3-1841590_640.png"> <br> Js <img class="icons" src="./img/icon/javascript-736400.svg">
+                </h2>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">HTML5 80%</div>
                 </div>
@@ -77,7 +82,8 @@
                 </div>
             </div>
             <div class="col-11 col-md-3 d-flex flex-column align-items-center">
-                <h2>Bootstrap
+                <h2>
+                  Bootstrap <img class="icons" src="./img/icon/Bootstrap_logo.svg.png" alt="">
                 </h2>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%"> 45%</div>
@@ -88,7 +94,7 @@
           <h1>
             Diplome
           </h1>
-          <div class="col-11 col-md-4 d-flex flex-column align-items-center">
+          <div class="col-11 col-md-4 txtx">
             <h2>Experience Professionel</h2>
             <p>
               07/09/2020-07/03/2021: <br> Service Civique, au Centre Saint-Joseph - Etablissement Scolaire Privé, Bourg en Bresse. <br>
@@ -187,17 +193,25 @@
               </div>
             </div>
           </div>
-          <div class="col-11 col-md-4 d-flex flex-column align-items-center">
+          <div class="col-11 col-md-4 txtx">
             <h2>Formation</h2>
             <p>
              2019 2020 Bts STA(Science Technologie des Aliments)
-             2019 Obtention du Bac Pro LCQ
-             2017 2019 Bac Pro LCQ(Laboratoire Contrôle Qualiter)
-             2016 2017 Segonde général
-             2016 Obtention du Brevet des collèges
+            </p>
+            <p>
+              2019 Obtention du Bac Pro LCQ
+            </p>
+            <p>
+              2017 2019 Bac Pro LCQ(Laboratoire Contrôle Qualiter)
+            </p>
+            <p>
+              2016 2017 Segonde général
+            </p>
+            <p>
+              2016 Obtention du Brevet des collèges
             </p>
           </div>
-          <div class="col-11 col-md-4 d-flex flex-column align-items-center">
+          <div class="col-11 col-md-4 txtx">
            <h2>Competence Transversal</h2>
            <p>
             Capacité à communiquer dans une langue étrangère <br>
@@ -252,7 +266,7 @@
               </div>
           </div>
         </section>
-        <section class="Deployés">
+        <section id="Déployer" class="Deployés">
           <div class="row">
             <h1 id="Sites-déployés">
               Sites déployés
