feat:back to top

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>    
         <header>
-            <nav class="navbar navbar-expand-md navbar-light bg-danger">
+            <nav id="navbarrr" class="navbar navbar-expand-md navbar-light bg-danger">
                 <div class="container-fluid ">
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,9 @@
                 </div>
               </nav>
         </header>
-        
+        <a class="back-to-top" href="#navbarrr">
+          <img class="icons" src="./img/back-to-top/one-way-6603690_640.jpg" alt="">
+        </a>
         <h1>
             Cv en ligne de Nathan Garrigues
         </h1>
@@ -58,19 +60,21 @@
             Compétence Web
         </h2>
         <div class="row">
-            <div class="col-11 col-md-3 d-flex flex-column align-items-center">
-                <h2>Photoshop <img class="icons" src="./img/icon/photoshop-1065296_640.jpg"> <br>Illustrator <img class="icons" src="./img/icon/adobe-illustrator-5977785_640.png"></h2>
+            <div class="col-11 col-md-3">
+                <h3>Photoshop <img class="icons" src="./img/icon/photoshop-1065296_640.jpg"> 
+                  </h3>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%">Bootstrap 35%</div>
                 </div>
-                <div class="progress">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width: 22%">Illustrator 15%</div>
-                </div>
-            </div>
-            <div class="col-11 col-md-4 d-flex flex-column align-items-center">
-                <h2>
-                  Html5<img class="icons" src="./img/icon/html5-1841458_640.png"> <br> Css3<img class="icons" src="./img/icon/css3-1841590_640.png"> <br> Js <img class="icons" src="./img/icon/javascript-736400.svg">
                 </h2>
+                <h3>
+                  Illustrator <img class="icons" src="./img/icon/adobe-illustrator-5977785_640.png">
+                </h3>
+            </div>
+            <div class="col-11 col-md-4">
+                <h3>
+                  Html5<img class="icons" src="./img/icon/html5-1841458_640.png"> <br> Css3<img class="icons" src="./img/icon/css3-1841590_640.png"> <br> Js <img class="icons" src="./img/icon/javascript-736400.svg">
+                </h3>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">HTML5 80%</div>
                 </div>
@@ -81,21 +85,24 @@
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="3" aria-valuemin="0" aria-valuemax="100" style="width: 3%">JS</div>
                 </div>
             </div>
-            <div class="col-11 col-md-3 d-flex flex-column align-items-center">
+            <div class="col-11 col-md-3">
                 <h2>
-                  Bootstrap <img class="icons" src="./img/icon/Bootstrap_logo.svg.png" alt="">
+                  Bootstrap <img class="icons" src="./img/icon/bootstrap-solid.svg" alt="">
                 </h2>
                 <div class="progress">
                   <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%"> 45%</div>
                 </div>
             </div>
         </div>
+        <div class="d-flex justify-content-center">
+          <hr>
+        </div>
         <div class="row">
-          <h1>
+          <h2>
             Diplome
-          </h1>
-          <div class="col-11 col-md-4 txtx">
-            <h2>Experience Professionel</h2>
+          </h2>
+          <div class="col-11 col-md-4 d-flex jutify-content-center flex-column">
+            <h3>Experience Professionel</h3>
             <p>
               07/09/2020-07/03/2021: <br> Service Civique, au Centre Saint-Joseph - Etablissement Scolaire Privé, Bourg en Bresse. <br>
               Contribuer aux activités d’éducation au
@@ -193,8 +200,8 @@
               </div>
             </div>
           </div>
-          <div class="col-11 col-md-4 txtx">
-            <h2>Formation</h2>
+          <div class="col-11 col-md-4 d-flex jutify-content-center flex-column">
+            <h3>Formation</h3>
             <p>
              2019 2020 Bts STA(Science Technologie des Aliments)
             </p>
@@ -211,14 +218,17 @@
               2016 Obtention du Brevet des collèges
             </p>
           </div>
-          <div class="col-11 col-md-4 txtx">
-           <h2>Competence Transversal</h2>
+          <div class="col-11 col-md-4 d-flex jutify-content-center flex-column">
+           <h3>Competence Transversal</h3>
            <p>
             Capacité à communiquer dans une langue étrangère <br>
             Autonomie, initiative <br>
             Rigueur <br>
            </p>
           </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <hr>
         </div>
         <section class="animation">
           <div class="row">
@@ -275,7 +285,7 @@
               <a href="https://nathang.promo-92.codeur.online/Harous-Pizza/" target="_blank"><img src="./img/harous-pizza.PNG" alt=""></a>
             </div>
             <div class="col-md-4 d-flex justify-content-center align-items-center">
-              <a href="./img/view-on.PNG" target="_blank"><img src="./img/view-on.PNG" alt=""></a>
+              <a href="https://nathang.promo-92.codeur.online/html-View-on.../Accueil.html" target="_blank"><img src="./img/view-on.PNG" alt=""></a>
             </div>
             <div class="col-md-4 d-flex justify-content-center align-items-center">
 
