--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                         </svg> </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Savoir du web</a>
+                        <a class="nav-link" href="#savoirweb">Savoir du web</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">experience/diplôme</a>
+                        <a class="nav-link" href="#experience">experience/diplôme</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -59,14 +59,13 @@
         <h2>
             Compétence Web
         </h2>
-        <div class="row">
+        <div class="row" id="savoirweb">
             <div class="col-11 col-md-3">
                 <h3>Photoshop <img class="icons" src="./img/icon/photoshop-1065296_640.jpg"> 
                   </h3>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%">Bootstrap 35%</div>
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%">Photoshop 35%</div>
                 </div>
-                </h2>
                 <h3>
                   Illustrator <img class="icons" src="./img/icon/adobe-illustrator-5977785_640.png">
                 </h3>
@@ -97,11 +96,11 @@
         <div class="d-flex justify-content-center">
           <hr>
         </div>
-        <div class="row">
+        <div class="row" id="experience">
           <h2>
             Diplome
           </h2>
-          <div class="col-11 col-md-4 d-flex jutify-content-center flex-column">
+          <div class="col-12 col-md-4 d-flex jutify-content-center flex-column">
             <h3>Experience Professionel</h3>
             <p>
               07/09/2020-07/03/2021: <br> Service Civique, au Centre Saint-Joseph - Etablissement Scolaire Privé, Bourg en Bresse. <br>
@@ -185,7 +184,7 @@
                           <a href="" target="_blank"><img src="./img/icon/iconmonstr-discord-1.svg" alt="Discord-icon"></a>
                         </div>
                         <div>
-                          <a href="./pdf/cv nathan.pdf" download="nathan.pdf"><img src="./img/icon/download.svg" alt="CV-PDF"></a>
+                          <a href="./pdf/cv nathan.pdf" target="_blank"><img src="./img/icon/download.svg" alt="CV-PDF"></a>
                         </div>
                         <div>
                           <a href="https://www.linkedin.com/in/nathan-garrigues-91073a218/" target="_blank"><img src="./img/icon/linkedin.svg" alt="linkedin-icon"></a>
@@ -200,7 +199,7 @@
               </div>
             </div>
           </div>
-          <div class="col-11 col-md-4 d-flex jutify-content-center flex-column">
+          <div class="col-12 col-md-4 d-flex jutify-content-center flex-column">
             <h3>Formation</h3>
             <p>
              2019 2020 Bts STA(Science Technologie des Aliments)
@@ -218,7 +217,7 @@
               2016 Obtention du Brevet des collèges
             </p>
           </div>
-          <div class="col-11 col-md-4 d-flex jutify-content-center flex-column">
+          <div class="col-12 col-md-4 d-flex jutify-content-center flex-column">
            <h3>Competence Transversal</h3>
            <p>
             Capacité à communiquer dans une langue étrangère <br>
@@ -285,10 +284,10 @@
               <a href="https://nathang.promo-92.codeur.online/Harous-Pizza/" target="_blank"><img src="./img/harous-pizza.PNG" alt=""></a>
             </div>
             <div class="col-md-4 d-flex justify-content-center align-items-center">
-              <a href="https://nathang.promo-92.codeur.online/html-View-on.../Accueil.html" target="_blank"><img src="./img/view-on.PNG" alt=""></a>
+              
             </div>
             <div class="col-md-4 d-flex justify-content-center align-items-center">
-
+              <a href="https://nathang.promo-92.codeur.online/html-View-on.../Accueil.html" target="_blank"><img src="./img/view-on.PNG" alt=""></a>
             </div>
           </div>
         </section>
