--- a/index.html
+++ b/index.html
@@ -64,24 +64,33 @@
                 <h3>Photoshop <img class="icons" src="./img/icon/photoshop-1065296_640.jpg"> 
                   </h3>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%">Photoshop 35%</div>
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="80" style="width: 35%">35%</div>
                 </div>
                 <h3>
                   Illustrator <img class="icons" src="./img/icon/adobe-illustrator-5977785_640.png">
                 </h3>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="80" style="width: 35%">35%</div>
+                </div>
             </div>
             <div class="col-11 col-md-4">
                 <h3>
-                  Html5<img class="icons" src="./img/icon/html5-1841458_640.png"> <br> Css3<img class="icons" src="./img/icon/css3-1841590_640.png"> <br> Js <img class="icons" src="./img/icon/javascript-736400.svg">
+                  Html5<img class="icons" src="./img/icon/html5-1841458_640.png"> 
                 </h3>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">HTML5 80%</div>
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="80" style="width: 80%">80%</div>
                 </div>
+                <h3>
+                  Css3<img class="icons" src="./img/icon/css3-1841590_640.png"> 
+                </h3>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100" style="width: 42%">CSS3 42%</div>
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="42" aria-valuemin="0" aria-valuemax="80" style="width: 42%">42%</div>
                 </div>
+                <h3>
+                  Js <img class="icons" src="./img/icon/javascript-736400.svg">
+                </h3>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="3" aria-valuemin="0" aria-valuemax="100" style="width: 3%">JS</div>
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="3" aria-valuemin="0" aria-valuemax="80" style="width: 3%">JS</div>
                 </div>
             </div>
             <div class="col-11 col-md-3">
@@ -89,7 +98,7 @@
                   Bootstrap <img class="icons" src="./img/icon/bootstrap-solid.svg" alt="">
                 </h2>
                 <div class="progress">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%"> 45%</div>
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="80" style="width: 45%"> 45%</div>
                 </div>
             </div>
         </div>
@@ -231,9 +240,9 @@
         </div>
         <section class="animation">
           <div class="row">
-            <h1 class="anime" id="Animations">
+            <h2 class="anime" id="Animations">
               Animations
-            </h1>
+            </h2>
             <div class="box col-12 col-md-3 d-flex flex-column align-items-center">
               <h5>
                 Rond tournant de 4couleurs
@@ -277,9 +286,9 @@
         </section>
         <section id="Déployer" class="Deployés">
           <div class="row">
-            <h1 id="Sites-déployés">
+            <h2 id="Sites-déployés">
               Sites déployés
-            </h1>
+            </h2>
             <div class="col-md-4 d-flex justify-content-center align-items-center">
               <a href="https://nathang.promo-92.codeur.online/Harous-Pizza/" target="_blank"><img src="./img/harous-pizza.PNG" alt=""></a>
             </div>
@@ -294,6 +303,7 @@
       </div>
         <footer>
         </footer>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
         <script src="./app.js/app.js"></script>
     </body>
