feat:bootstrap modal/collapse

--- a/index.html
+++ b/index.html
@@ -112,33 +112,71 @@
           <div class="col-12 col-md-4 d-flex jutify-content-center flex-column">
             <h3>Experience Professionel</h3>
             <p>
-              07/09/2020-07/03/2021: <br> Service Civique, au Centre Saint-Joseph - Etablissement Scolaire Privé, Bourg en Bresse. <br>
-              Contribuer aux activités d’éducation au
-              développement durable, aux enjeux
-              environnementaux, à la culture et au sport
-              nature.
-              Rajout de fonction suite au Covid-19, aide au 
-              service, rangement et nettoyage du Self.
+              <button class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">07/09/2020-07/03/2021:Service Civique, au Centre Saint-Joseph  </button>
+              <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">09/2018 : Stage en Contrôle Qualité, CMSI,Attignat</button>
+              <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample3" aria-expanded="false" aria-controls="multiCollapseExample3">06/2018 – 07/2018 : Stage en Laboratoire Veuve Ambal Beaune</button>
+              <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample4" aria-expanded="false" aria-controls="multiCollapseExample4">04/2018 : Stage Préparateur de travaux
+                      pratiques Lycée Vinicole, Beaune.</button>
+              <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2 multiCollapseExample3 multiCollapseExample4">Ouvre tout les panels</button>
             </p>
-            <p>
-              09/2018 : Stage en Contrôle Qualité, CMSI,Attignat
-              Metrologie
-            </p>
-            <p>
-              06/2018 – 07/2018 : Stage en Laboratoire
-              Contrôle Qualité de Crémants et de Liqueurs,
-              La Veuve Ambal, Beaune. <br>
-              Réalisation de solution et danalyse pour 
-              verifier que le vin et propre a la consomation. 
-              Préparations de solutions chimiques et de 
-              solutions pour le vin.
-            </p>
-            <p>
-              04/2018 : Stage Préparateur de travaux
-              pratiques Lycée Vinicole, Beaune. <br>
-              Préparations de solutions chimiques et de 
-              solutions pour le vin.
-            </p>
+            <div class="row">
+              <div class="col-10">
+                <div class="collapse multi-collapse" id="multiCollapseExample1">
+                  
+                  <div class="card card-body">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    <p>
+                      07/09/2020-07/03/2021: <br> Service Civique, au Centre Saint-Joseph - Etablissement Scolaire Privé, Bourg en Bresse. <br>
+                      Contribuer aux activités d’éducation au
+                      développement durable, aux enjeux
+                      environnementaux, à la culture et au sport
+                      nature.
+                      Rajout de fonction suite au Covid-19, aide au 
+                      service, rangement et nettoyage du Self.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div class="collapse multi-collapse" id="multiCollapseExample2">
+                  <div class="card card-body">
+                    <p>
+                      Test de soliditer sur des bouchon de parfum sortie de presse. <br>
+                      Test d'étanchéiter. <br>
+                      Analyse Métrologique.
+                   </p>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div class="collapse multi-collapse" id="multiCollapseExample3">
+                  <div class="card card-body">
+                    <p>
+                      Contrôle Qualité de Crémants et de Liqueurs,
+                      La Veuve Ambal, Beaune. <br>
+                      Réalisation de solution et danalyse pour 
+                      verifier que le vin et propre a la consomation. 
+                      Préparations de solutions chimiques et de 
+                      solutions pour le vin.
+                      Analyse en cuve de fermentation.
+                      Analyse spectrométrique.
+                      Test via des Ondes.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div>
+                <div class="collapse multi-collapse" id="multiCollapseExample4">
+                  <div class="card card-body">
+                    <p>
+                      Préparations de solutions chimiques et de 
+                      solutions pour le vin.
+                      Préparations de solutions de nettoyage.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasLeft" aria-labelledby="offcanvasLeftLabel">
               <div class="offcanvas-header">
                 <h5 id="offcanvasLeftLabel">Contact</h5>
@@ -208,31 +246,70 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4 d-flex jutify-content-center flex-column">
-            <h3>Formation</h3>
-            <p>
-             2019 2020 Bts STA(Science Technologie des Aliments)
-            </p>
-            <p>
-              2019 Obtention du Bac Pro LCQ
-            </p>
-            <p>
-              2017 2019 Bac Pro LCQ(Laboratoire Contrôle Qualiter)
-            </p>
-            <p>
-              2016 2017 Segonde général
-            </p>
-            <p>
-              2016 Obtention du Brevet des collèges
-            </p>
+          <div class="col-12 col-md-4 d-flex align-items-center justify-content-center">
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              Formation
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Formation</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <p>
+                    2019 2020 Bts STA(Science Technologie des Aliments)
+                    </p>
+                    <p>
+                      2019 Obtention du Bac Pro LCQ
+                    </p>
+                     <p>
+                        2017 2019 Bac Pro LCQ(Laboratoire Contrôle Qualiter)
+                    </p>
+                    <p>
+                      2016 2017 Segonde général
+                    </p>
+                    <p>
+                      2016 Obtention du Brevet des collèges
+                    </p>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Fermer</button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="col-12 col-md-4 d-flex jutify-content-center flex-column">
-           <h3>Competence Transversal</h3>
-           <p>
-            Capacité à communiquer dans une langue étrangère <br>
-            Autonomie, initiative <br>
-            Rigueur <br>
-           </p>
+          <div class="col-12 col-md-4 d-flex jutify-content-center align-items-center">
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              Qualiter/Competence Transversal
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <p>
+                      Capacité à communiquer dans une langue étrangère <br>
+                      Autonomie, initiative <br>
+                      Rigueur <br>
+                    </p>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="d-flex justify-content-center">
@@ -303,7 +380,6 @@
       </div>
         <footer>
         </footer>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
         <script src="./app.js/app.js"></script>
     </body>
