--- a/index.html
+++ b/index.html
@@ -119,12 +119,10 @@
                pratiques Lycée Vinicole, Beaune.</button>
               <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2 multiCollapseExample3 multiCollapseExample4">Ouvre tout les panels</button>
             </p>
-            <div class="row">
+            <div class="row d-flex justify-content-center">
               <div class="col-10">
                 <div class="collapse multi-collapse" id="multiCollapseExample1">
-                  
                   <div class="card card-body">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     <p>
                       07/09/2020-07/03/2021: <br> Service Civique, au Centre Saint-Joseph - Etablissement Scolaire Privé, Bourg en Bresse. <br>
                       Contribuer aux activités d’éducation au
@@ -137,7 +135,7 @@
                   </div>
                 </div>
               </div>
-              <div>
+              <div class="col-10">
                 <div class="collapse multi-collapse" id="multiCollapseExample2">
                   <div class="card card-body">
                     <p>
@@ -148,7 +146,7 @@
                   </div>
                 </div>
               </div>
-              <div>
+              <div class="col-10">
                 <div class="collapse multi-collapse" id="multiCollapseExample3">
                   <div class="card card-body">
                     <p>
@@ -165,7 +163,7 @@
                   </div>
                 </div>
               </div>
-              <div>
+              <div class="col-10">
                 <div class="collapse multi-collapse" id="multiCollapseExample4">
                   <div class="card card-body">
                     <p>
@@ -283,7 +281,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-md-4 d-flex jutify-content-center align-items-center">
+          <div class="col-12 col-md-4 d-flex align-items-center jutify-content-center">
             <!-- Button trigger modal -->
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
               Qualiter/Competence Transversal
