--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
           </div>
           <div class="col-12 col-md-4 d-flex align-items-center jutify-content-center">
             <!-- Button trigger modal -->
-            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+            <button type="button" class="btn btn-primary mrb" data-bs-toggle="modal" data-bs-target="#exampleModal2">
               Qualiter/Competence Transversal
             </button>
 
